--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,19 +77,23 @@ body {
 }
 
 .video-container {
-  height: 650px; /* Fixed height for consistency */
   width: 100%;
+  position: relative;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .video-element {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   object-fit: cover; /* Ensures the video covers the container without distortion */
 }
 
 @media (max-width: 768px) {
   .video-container {
-    height: 250px; /* Adjust height for mobile, if necessary */
+    padding-top: 56.25%; /* Maintain aspect ratio on mobile */
   }
 }
 
