--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,23 +77,19 @@ body {
 }
 
 .video-container {
+  height: 650px; /* Fixed height for consistency */
   width: 100%;
-  position: relative;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
 .video-element {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover; /* Ensures the video covers the container without distortion */
 }
 
 @media (max-width: 768px) {
   .video-container {
-    padding-top: 56.25%; /* Maintain aspect ratio on mobile */
+    height: 250px; /* Adjust height for mobile, if necessary */
   }
 }
 
