--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ body {
   filter: blur(40px);
   background: radial-gradient(
     circle,
-    rgba(248, 107, 223, 1) 0%,
+    rgb(238, 17, 198) 0%,
     rgba(107, 107, 248, 0.8) 100%
   );
 }
